<resources>
    <string name="app_name">LibreriaApp</string>

    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="autor">Autor</string>
    <string name="editorial">Editorial</string>
    <string name="tipo_literatura">Tipo literatura</string>
    <string name="guardar">Guardar</string>
    <string name="mostar">Mostrar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar libro</string>
    <string name="titulo_listar">Lista de libros</string>
    <string name="titulo_buscar">Buscar libro</string>
    <string name="titulo_modificar">Modificar libro</string>
</resources>
