<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etId"
        android:enabled="false"
        android:hint="@string/id"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:hint="@string/nombre"
        android:layout_below="@id/etId" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAutor"
        android:hint="@string/autor"
        android:layout_below="@id/etNombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditorial"
        android:hint="@string/editorial"
        android:layout_below="@id/etAutor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTipoLiteratura"
        android:hint="@string/tipo_literatura"
        android:layout_below="@id/etEditorial" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:id="@+id/btnModificar"
        android:onClick="confirmarModificar"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:id="@+id/btnEliminar"
        android:onClick="confirmarEliminar"
        android:layout_alignTop="@+id/btnModificar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="56dp" />

</RelativeLayout>