<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aprendiz.libreriaapp.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etId"
        android:hint="@string/id"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:hint="@string/nombre"
        android:layout_below="@id/etId" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAutor"
        android:hint="@string/autor"
        android:layout_below="@id/etNombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditorial"
        android:hint="@string/editorial"
        android:layout_below="@id/etAutor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTipoLiteratura"
        android:hint="@string/tipo_literatura"
        android:layout_below="@id/etEditorial" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/btnAgregar"
        android:onClick="onClickAgregar"
        android:layout_below="@+id/etTipoLiteratura"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp" />

<!--    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:id="@+id/btnBuscar"
        android:onClick="onClickModificar"
        android:layout_alignTop="@+id/btnAgregar"
        android:layout_alignParentEnd="true" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostar"
        android:id="@+id/btnMostrar"
        android:onClick="onClickMostrarLista"
        android:layout_alignTop="@+id/btnAgregar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
